src/test/deca/extension/codegen/invalid/result/test_acces_invalid_output_no_check.res
  ** IMA ** ERREUR ** Ligne 32 : 
    STORE : Pas une adresse memoire
